# textese

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  THIRD_PARTY_LICENSES.txt  pyproject.toml
textese/: flatten.py
